# mcp-ide-bridge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  SECURITY.md  TECHNICAL_CONVERSATION_LOG.md  autopilotsetup.md  docker-compose.yml  docker-deploy.sh  dyson_frontend_recipients.json  env.example  mcp_recipients.json  miles_mcp_server_recipients.json  pyproject.toml  requirements.txt  test_mcp_client.py  test_message.py  test_receive.py  test_send.py
.cursor/: mcp.json
.github/workflows/: ci.yml  release.yml
examples/: mcp_recipients.example.json
examples/client/: README.md  requirements.txt  test_connection.py
examples/configs/: dyson_frontend_recipients.json  dyson_mcp_recipients.json  forksmealplanner_api_recipients.json  forksmealplanner_web_recipients.json  mcpresearchserver_recipients.json
examples/multi-project-setup/: README.md  api-windsurf.json  backend-vscode.json  devops-jetbrains.json  frontend-cursor.json  rag-windsurf.json
examples/reference/: weather.py  weather_pyproject.toml
python-example/client/: client.py  pyproject.toml
src/mcp_messaging/: __init__.py  models.py  queue_backends.py  server.py
tests/: __init__.py  test_simple.py
typescript-example/client/: index.ts  package-lock.json  package.json
typescript-example/server/: package-lock.json  package.json  tsconfig.json
typescript-example/server/src/: index.ts  server.ts
