[project]
name = "mcp-ide-bridge"
version = "1.0.0"
description = "Open source MCP HTTP Streamable messaging server for client-to-client communication"
authors = [
    {name = "MVP2o.ai", email = "contact@mvp2o.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "messaging", "ide", "collaboration", "protocol", "streamable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-ide-bridge = "mcp_messaging.server:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.urls]
Homepage = "https://github.com/wiltshirek/mcp-ide-bridge"
Repository = "https://github.com/wiltshirek/mcp-ide-bridge"
Documentation = "https://github.com/wiltshirek/mcp-ide-bridge#readme"
"Bug Reports" = "https://github.com/wiltshirek/mcp-ide-bridge/issues" 