[project]
name = "mcp-ide-bridge"
version = "1.0.0"
description = "Open source MCP HTTP Streamable messaging server for client-to-client communication"
authors = [
    {name = "MVP2o.ai", email = "contact@mvp2o.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "messaging", "ide", "collaboration", "protocol", "streamable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-ide-bridge = "mcp_messaging.server:main"

[project.urls]
Homepage = "https://github.com/your-username/mcp-ide-bridge"
Repository = "https://github.com/your-username/mcp-ide-bridge"
Documentation = "https://github.com/your-username/mcp-ide-bridge#readme"
"Bug Reports" = "https://github.com/your-username/mcp-ide-bridge/issues" 